<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="680dp"
    android:layout_margin="50dp"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginRight="40dp"
        android:text="@string/tela_de_cadastro"
        android:textSize="30sp"
        android:layout_marginEnd="40dp" />

    <!-- ////////////////////////////////////////////////// -->
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nome"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/Nome"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_nome"
        android:inputType="text" />
    <!-- ////////////////////////////////////////////////// -->
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CPF"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/CPF"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_cpf"
        android:inputType="number" />
    <!-- ////////////////////////////////////////////////// -->
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Telefone"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/Telefone"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_telefone"
        android:inputType="phone" />
    <!-- ////////////////////////////////////////////////// -->
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_Email"
        android:inputType="textEmailAddress" />
    <!-- ////////////////////////////////////////////////// -->

    <CheckBox
        android:id="@+id/cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Termos de Uso" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cadastrar" />

</LinearLayout>